--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://youtube.com/">
+<meta http-equiv="refresh" content="0; url=https://youtu.be/-vSk2hRdRpw/">
